answer-content/206696.txt
<div class="s-prose s-prose__disable-spoiler-hover js-post-body" itemprop="text">
<p>Your program expects the user to refer to completed or incomplete tasks by a numeric index.  However, the Markdown file contains an unnumbered bulleted list, which forces the user to count the items manually (starting from 0).  That design is inhumane.  I suggest that you change the Markdown to use numbered lists.</p>

<p>By the way, "uncompleted" is not common in English usage.  I suggest rewording it as <a href="https://books.google.com/ngrams/graph?content=uncompleted%2C+incomplete&amp;year_start=1800&amp;year_end=2000&amp;corpus=15&amp;smoothing=3&amp;share=&amp;direct_url=t1%3B%2Cuncompleted%3B%2Cc0%3B.t1%3B%2Cincomplete%3B%2Cc0" rel="nofollow noreferrer">"incomplete"</a>.</p>

<p>You are missing some required <code>#includes</code>.  On my system, I see that…</p>

<ul>
<li><p><code>todoargs.c</code> needs to <code>#include &lt;unistd.h&gt;</code>:</p>

<pre class="lang-none prettyprint-override"><code>$ make
gcc -std=c11 -Wall -Wextra -Werror -c -o todo.o todo.c
gcc -std=c11 -Wall -Wextra -Werror -c -o todoargs.o todoargs.c
todoargs.c:68:23: error: implicit declaration of function 'getopt' is invalid in
      C99 [-Werror,-Wimplicit-function-declaration]
        while ((opt = getopt(argc, argv, ":f:cuerAh")) != -1) {
…
</code></pre>

<p>This omission is your fault.</p></li>
<li><p><code>utils.c</code> has a warning-treated-as-an-error when I compile it with clang 10.0.0 on macOS 10.13:</p>

<pre class="lang-none prettyprint-override"><code>$ make
gcc -std=c11 -Wall -Wextra -Werror -c -o todoargs.o todoargs.c
gcc -std=c11 -Wall -Wextra -Werror -c -o utils.o utils.c
utils.c:245:25: error: implicit declaration of function 'strdup' is invalid in
      C99 [-Werror,-Wimplicit-function-declaration]
        char *str_dup = strdup(str);
                        ^
…
</code></pre>

<p>Actually, <code>utils.c</code> includes <code>utils.h</code>, which in turn includes <code>string.h</code> already.  I believe that this is a bug in macOS/XCode, and have filed Apple Radar 45714179 for it.  My reasoning:</p>

<ol>
<li><p><a href="http://pubs.opengroup.org/onlinepubs/9699919799/functions/strdup.html" rel="nofollow noreferrer">According to the X/OPEN group documentation</a>, <code>strdup()</code> first appeared in Issue 4, Version 2, then moved from X/OPEN UNIX extension to BASE in Issue 5.</p></li>
<li><p><a href="https://en.wikipedia.org/wiki/Single_UNIX_Specification#1997:_Single_UNIX_Specification_version_2" rel="nofollow noreferrer">According to Wikipedia</a>, SUSv2 includes "the Base Definitions, Issue 5", which should therefore include <code>strdup()</code>.</p></li>
<li><p><a href="https://www.gnu.org/software/libc/manual/html_node/Feature-Test-Macros.html#index-_005fXOPEN_005fSOURCE" rel="nofollow noreferrer">According to GNU libc</a>, <code>#define XOPEN_SOURCE 500</code> will include definitions from the Single Unix Specification, version 2. Your code compiles just fine for me on Linux.  Also, <a href="https://www.ibm.com/support/knowledgecenter/en/SSLTBW_2.1.0/com.ibm.zos.v2r1.bpxbd00/ftms.htm" rel="nofollow noreferrer">IBM's z/OS documentation</a> confirms that <code>#define XOPEN_SOURCE 500</code> makes available certain key functions that are associated with Single UNIX Specification, Version 2.</p></li>
<li><p>The <a href="https://developer.apple.com/library/archive/documentation/System/Conceptual/ManPages_iPhoneOS/man3/strdup.3.html" rel="nofollow noreferrer">Apple man page on <code>strdup(3)</code></a> merely says that "The <code>strdup()</code> function first appeared in 4.4BSD", and does not specify what versioning macros are necessary to obtain its declaration.  Your code does compile cleanly on macOS with <code>#define _XOPEN_SOURCE 600</code>, but I don't believe that that is a reasonable requirement.</p></li>
</ol></li>
</ul>
    </div>